# oneCCL

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  MAINTAINERS.md  README.md  SECURITY.md  advanced-configuration.html  api.html  api_reference.html  benchmark.html  ccl.map  collective_algorithms_selection.html  collectives_caching.html  collectives_execution.html  collectives_fusion.html  collectives_prioritization.html  device_communication.html  elasticity.html  env-variables.html  env_variables.html  general-configuration.html  genindex.html  host_communication.html  index.html  installation.html  legal.html  limitations.html  objects.inv  operation_caching.html  operation_execution.html  operation_fusion.html  operation_prioritization.html  optimization_notice.html  prerequisites.html  programming-model.html  sample.html  search.html  (+7 more)
cmake/: ccl  (+13 more)
examples/: CMakeLists.txt  run_new.sh
examples/benchmark/: CMakeLists.txt
examples/common/: CMakeLists.txt  api_info.cpp  benchmark.cpp  platform_info.cpp  version.cpp
examples/cpu/: CMakeLists.txt  allgatherv.cpp  allgatherv_cpp.cpp  allgatherv_iov.cpp  allreduce.c  allreduce.cpp  allreduce_cpp.cpp  allreduce_k8s.c  allreduce_rs.c  alltoall.c  alltoallv.cpp  alltoallv_cpp.cpp  bcast.cpp  bcast_cpp.cpp  broadcast.cpp  communicator.cpp  communicator_cpp.cpp  cpu_allgather_test.cpp  cpu_allgatherv_test.c  cpu_allgatherv_test.cpp  cpu_allreduce_bf16_test.cpp  cpu_allreduce_bfp16.c  cpu_allreduce_cpp_test.cpp  cpu_allreduce_test.c  cpu_allreduce_test.cpp  cpu_bcastExt_test.cpp  cpu_broadcast_test.cpp  custom_allreduce.cpp  datatype.cpp  external_kvs.cpp  priority_allreduce.cpp  reduce.cpp  reduce_cpp.cpp  reduce_scatter.cpp  sparse_allreduce.cpp  sparse_test_algo.hpp  unordered_allreduce.cpp
examples/external_launcher/: CMakeLists.txt  external_launcher.cpp  run.sh  run_binary.sh
examples/include/: base.h  base.hpp  base_utils.hpp  bf16.hpp  bfp16.h  store.hpp  sycl_base.hpp
examples/level_zero/: CMakeLists.txt  allreduce_l0.cpp
examples/pt2pt/: CMakeLists.txt
examples/resizable/: CMakeLists.txt  resizable.c  run.sh  run_test.sh
examples/sycl/: CMakeLists.txt  sycl_allgather_test.cpp  sycl_allgatherv_cpp_test.cpp  sycl_allgatherv_custom_usm_test.cpp  sycl_allgatherv_inplace_cpp_test.cpp  sycl_allgatherv_inplace_test.cpp  sycl_allgatherv_inplace_usm_test.cpp  sycl_allgatherv_test.cpp  sycl_allgatherv_usm_test.cpp  sycl_allreduce_cpp_test.cpp  sycl_allreduce_inplace_usm_test.cpp  sycl_allreduce_test.cpp  sycl_allreduce_usm_test.cpp  sycl_alltoall_cpp_test.cpp  sycl_alltoall_test.cpp  sycl_alltoall_usm_test.cpp  sycl_alltoallv_cpp_test.cpp  sycl_alltoallv_inplace_usm_test.cpp  sycl_alltoallv_test.cpp  sycl_alltoallv_usm_test.cpp  sycl_bcast_cpp_test.cpp  sycl_bcast_test.cpp  sycl_bcast_usm_test.cpp  sycl_broadcastExt_usm_test.cpp  sycl_broadcast_test.cpp  sycl_broadcast_usm_test.cpp  sycl_reduce_cpp_test.cpp  sycl_reduce_inplace_usm_test.cpp  sycl_reduce_scatter_inplace_usm_test.cpp  sycl_reduce_scatter_test.cpp  sycl_reduce_scatter_usm_test.cpp  sycl_reduce_test.cpp  sycl_reduce_usm_test.cpp
src/: CMakeLists.txt  ccl.cpp  ccl_api_functions.cpp  ccl_api_functions_generators.hpp  ccl_app_api_coll_attr.cpp  ccl_app_api_comm_attr.cpp  ccl_app_api_comm_split_attr.cpp  ccl_app_api_datatype_attr.cpp  ccl_app_api_event.cpp  ccl_app_api_init_attr.cpp  ccl_app_api_kvs_attr.cpp  ccl_cpp_api.cpp  ccl_cpp_api_explicit_in.hpp  ccl_cpp_communicator.cpp  ccl_cpp_context.cpp  ccl_cpp_device.cpp  ccl_cpp_device_communicator.cpp  ccl_cpp_environment.cpp  ccl_cpp_event.cpp  ccl_cpp_gpu_api.cpp  ccl_cpp_kvs.cpp  ccl_cpp_stream.cpp  ccl_cpp_utils.cpp  ccl_empty_attr.cpp  ccl_empty_coll_attr.cpp  ccl_empty_comm_attr.cpp  ccl_empty_comm_split_attr.cpp  ccl_empty_init_attr.cpp  ccl_empty_kvs_attr.cpp  ccl_empty_stream.cpp  ccl_gpu_module.hpp  ccl_gpu_modules.cpp  ccl_utils.cpp  coll_attr_creation_impl.hpp  coll_attr_impl.hpp  comm_attr_impl.hpp  comm_split_attr_creation_impl.hpp  comm_split_attr_impl.hpp  communicator_impl.hpp  communicator_impl_details.hpp  (+20 more)
src/atl/: CMakeLists.txt  atl.cpp  atl.h  atl_base_comm.cpp  atl_base_comm.hpp  atl_base_transport.cpp  atl_base_transport.hpp  atl_def.cpp  atl_def.h  atl_wrapper.cpp  atl_wrapper.h
src/coll/: ccl_allgather_op_attr.cpp  ccl_allgather_op_attr.hpp  ccl_allreduce_op_attr.cpp  ccl_allreduce_op_attr.hpp  ccl_alltoall_op_attr.cpp  ccl_alltoall_op_attr.hpp  ccl_alltoallv_op_attr.cpp  ccl_alltoallv_op_attr.hpp  ccl_barrier_attr.hpp  ccl_barrier_op_attr.cpp  ccl_bcast_op_attr.cpp  ccl_bcast_op_attr.hpp  ccl_reduce_op_attr.cpp  ccl_reduce_op_attr.hpp  ccl_reduce_scatter_op_attr.cpp  ccl_reduce_scatter_op_attr.hpp  ccl_sparse_allreduce_op_attr.cpp  ccl_sparse_allreduce_op_attr.hpp  coll.cpp  coll.hpp  coll_attributes.hpp  coll_check.cpp  coll_check.hpp  coll_common_attributes.cpp  coll_common_attributes.hpp  coll_param.cpp  coll_param.hpp  coll_util.cpp  coll_util.hpp
src/comm/: atl_tag.cpp  atl_tag.hpp  comm.cpp  comm.hpp  comm_common_attr.hpp  comm_impl.hpp  comm_interface.hpp  comm_selector.cpp  comm_selector.hpp  comm_split_common_attr.hpp  stub_comm.cpp  stub_comm.hpp
src/comp/: comp.cpp  comp.hpp
src/exec/: exec.cpp  exec.hpp
src/fusion/: fusion.cpp  fusion.hpp
src/hwloc/: hwloc_wrapper.c  hwloc_wrapper.cpp  hwloc_wrapper.h  hwloc_wrapper.hpp
src/kernels/: a2a_helpers.h  bf16.h  common.h  event_declaration.h  fp16.h  kernels.cl  kernels.spv  lp.h  ring_allreduce.spv  rne.h  shared.h
src/native_device_api/: api_explicit_instantiation.hpp  compiler_ccl_wrappers_dispatcher.hpp  interop_utils.cpp
src/parallelizer/: parallelizer.cpp  parallelizer.hpp
src/sched/: buffer_cache.cpp  buffer_cache.hpp  extra_sched.cpp  extra_sched.hpp  gpu_concurrent_sched.cpp  gpu_concurrent_sched.hpp  gpu_sched.cpp  gpu_sched.hpp  master_sched.cpp  master_sched.hpp  sched.cpp  sched.hpp  sched_base.cpp  sched_base.hpp  sched_group.cpp  sched_group.hpp  sched_restart_manager.cpp  sched_restart_manager.hpp  sched_timer.cpp  sched_timer.hpp  ze_handle_manager.cpp  (+1 more)
(+1552 files in other folders)
